# turtlebot-burger-slam-nav

./: README.md  dockerfile_nvidia_ros  launch.sh  package.xml
cd_harmony/: CMakeLists.txt  package.xml  plugin_description.xml
cd_harmony/include/: waypointPanel.h  waypointServer.h  waypointsTool.h
cd_harmony/launch/: gazebo_sim.launch  move_base.launch  navigation.launch  slam.launch
cd_harmony/maps/real/: map-v4.pgm  map-v4.yaml
cd_harmony/maps/sim/level/041656-2024-05-27/: level.pgm  level.yaml
cd_harmony/models/level/: model.config  model.sdf
cd_harmony/models/unit_box_1/: model.sdf
cd_harmony/msg/: waypoint_array.msg
cd_harmony/param/: costmap_common_params_burger.yaml  move_base_params.yaml
cd_harmony/param/cur/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params.yaml
cd_harmony/resource/: waypointPanel.ui
cd_harmony/rviz/: turtlebot3_navigation.rviz
cd_harmony/src/: waypointPanel.cpp  waypointServer.cpp  waypointsTool.cpp
cd_harmony/worlds/: level.world
docker/: dockerfile_tb3_base  dockerfile_tb3_dev  entrypoint.sh  launch.sh
docker/vim/: .vimrc
models/borders/: model.config  model.sdf
